promotion workflow 2024-09-09 add_image: oracular update_image: oracular

--- a/conf/cpc-patch.yaml
+++ b/conf/cpc-patch.yaml
@@ -803,3 +803,21 @@ com.ubuntu.maas:v3:download.json:
         labels:
         - candidate
         - stable
+  com.ubuntu.maas:v3:boot:24.10:amd64:ga-24.10:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.10:amd64:ga-24.10-lowlatency:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.10:arm64:ga-24.10:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.10:armhf:ga-24.10:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.10:ppc64el:ga-24.10:
+    labels:
+    - candidate
+  com.ubuntu.maas:v3:boot:24.10:s390x:ga-24.10:
+    labels:
+    - candidate
