--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -99,11 +99,25 @@ releases:
    kernels:
     - [noble,       amd64,    ga-24.04,        generic,     linux-generic,                        *sa_hwe_nn]
     - [noble,       amd64,    ga-24.04,        lowlatency,  linux-image-lowlatency,               *sa_hwe_nn]
+    - [noble,       amd64,    hwe-24.04,       generic,     linux-generic-hwe-24.04,              *sa_hwe_nn]
+    - [noble,       amd64,    hwe-24.04,       lowlatency,  linux-lowlatency-hwe-24.04,           *sa_hwe_nn]
+    - [noble,       amd64,    hwe-24.04-edge,  generic,     linux-generic-hwe-24.04-edge,         *sa_hwe_nn_edge]
+    - [noble,       amd64,    hwe-24.04-edge,  lowlatency,  linux-lowlatency-hwe-24.04-edge,      *sa_hwe_nn_edge]
     - [noble,       arm64,    ga-24.04,        generic,     linux-generic,                        *sa_hwe_nn]
+    - [noble,       arm64,    hwe-24.04,       generic,     linux-generic-hwe-24.04,              *sa_hwe_nn]
+    - [noble,       arm64,    hwe-24.04,       lowlatency,  linux-lowlatency-hwe-24.04,           *sa_hwe_nn]
+    - [noble,       arm64,    hwe-24.04-edge,  generic,     linux-generic-hwe-24.04-edge,         *sa_hwe_nn_edge]
+    - [noble,       arm64,    hwe-24.04-edge,  lowlatency,  linux-lowlatency-hwe-24.04-edge,      *sa_hwe_nn_edge]
     - [noble,       armhf,    ga-24.04,        generic,     linux-generic,                        *arm_hwe_nn]
+    - [noble,       armhf,    hwe-24.04,       generic,     linux-generic-hwe-24.04,              *arm_hwe_nn]
+    - [noble,       armhf,    hwe-24.04-edge,  generic,     linux-generic-hwe-24.04-edge,         *arm_hwe_nn_edge]
     - [noble,       ppc64el,  ga-24.04,        generic,     linux-generic,                        *sa_hwe_nn]
+    - [noble,       ppc64el,  hwe-24.04,       generic,     linux-generic-hwe-24.04,              *sa_hwe_nn]
+    - [noble,       ppc64el,  hwe-24.04-edge,  generic,     linux-generic-hwe-24.04-edge,         *sa_hwe_nn_edge]
     - [noble,       riscv64,  ga-24.04,        generic,     linux-generic,                        *sa_hwe_nn]
     - [noble,       s390x,    ga-24.04,        generic,     linux-generic,                        *sa_hwe_nn]
+    - [noble,       s390x,    hwe-24.04,       generic,     linux-generic-hwe-24.04,              *sa_hwe_nn]
+    - [noble,       s390x,    hwe-24.04-edge,  generic,     linux-generic-hwe-24.04-edge,         *sa_hwe_nn_edge]
  - version: "23.10"
    release: mantic
    kernels:
