--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -26,6 +26,7 @@ bootloaders:
    os: grub-efi-signed
    files:
     - usr/lib/shim/shimx64.efi.signed.latest, bootx64.efi
+    - usr/lib/shim/mmx64.efi, mmx64.efi
     - usr/lib/grub/x86_64-efi-signed/grubnetx64.efi.signed, grubx64.efi
  - firmware-platform: uefi
    packages:
@@ -38,6 +39,7 @@ bootloaders:
    os: grub-efi
    files:
     - usr/lib/shim/shimaa64.efi.signed.latest, bootaa64.efi
+    - usr/lib/shim/mmaa64.efi, mmaa64.efi
     - usr/lib/grub/arm64-efi-signed/grubnetaa64.efi.signed, grubaa64.efi
  - firmware-platform: open-firmware
    packages:
