--- a/conf/bootloaders.yaml
+++ b/conf/bootloaders.yaml
@@ -9,7 +9,7 @@ bootloaders:
    arch: amd64
    arches: amd64, i386
    archive: http://archive.ubuntu.com/ubuntu
-   release: jammy
+   release: noble
    os: pxelinux
    files:
     - usr/lib/PXELINUX/pxelinux.0
@@ -22,7 +22,7 @@ bootloaders:
    arch: amd64
    arches: amd64
    archive: http://archive.ubuntu.com/ubuntu
-   release: jammy
+   release: noble
    os: grub-efi-signed
    files:
     - usr/lib/shim/shimx64.efi.signed.latest, bootx64.efi
@@ -35,7 +35,7 @@ bootloaders:
    arch: arm64
    arches: arm64
    archive: http://ports.ubuntu.com
-   release: jammy
+   release: noble
    os: grub-efi
    files:
     - usr/lib/shim/shimaa64.efi.signed.latest, bootaa64.efi
