--- a/conf/meph-v3.yaml
+++ b/conf/meph-v3.yaml
@@ -46,6 +46,7 @@ subarches:
  - &sa_hwe_oo       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04, ga-24.10]
  - &sa_hwe_pp       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04, ga-24.10, ga-25.04]
  - &sa_hwe_qq       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04, ga-24.10, ga-25.04, ga-25.10]
+ - &sa_hwe_rr       [generic,           hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04, ga-24.10, ga-25.04, ga-25.10, ga-26.04]
  - &arm_hwe_t       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t]
  - &arm_hwe_u       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u]
  - &arm_hwe_v       [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v]
@@ -71,6 +72,7 @@ subarches:
  - &arm_hwe_oo      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04, ga-24.10]
  - &arm_hwe_pp      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04, ga-24.10, ga-25.04]
  - &arm_hwe_qq      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04, ga-24.10, ga-25.04, ga-25.10]
+ - &arm_hwe_rr      [generic, highbank, hwe-p, hwe-q, hwe-r, hwe-s, hwe-t, hwe-u, hwe-v, hwe-w, ga-16.04, ga-16.10, ga-17.04, ga-17.10, ga-18.04, ga-18.10, ga-19.04, ga-19.10, ga-20.04, ga-20.10, ga-21.04, ga-21.10, ga-22.04, ga-22.10, ga-23.04, ga-23.10, ga-24.04, ga-24.10, ga-25.04, ga-25.10, ga-26.04]
 
 misc:
  - &glpae generic-lpae
@@ -81,6 +83,14 @@ misc:
  - &kh-xgene   {suffix: .xgene, kihelper: "kh-xgene", di-format: 'xgene'}
 
 releases:
+ - version: "26.04"
+   release: resolute
+   kernels:
+    - [ resolute,    amd64,    ga-26.04,        generic,     linux-generic,                        *sa_hwe_rr ]
+    - [ resolute,    arm64,    ga-26.04,        generic,     linux-generic,                        *sa_hwe_rr ]
+    - [ resolute,    armhf,    ga-26.04,        generic,     linux-generic,                        *arm_hwe_rr ]
+    - [ resolute,    ppc64el,  ga-26.04,        generic,     linux-generic,                        *sa_hwe_rr ]
+    - [ resolute,    s390x,    ga-26.04,        generic,     linux-generic,                        *sa_hwe_rr ]
  - version: "25.10"
    release: questing
    kernels:
