docs: document the image building process
It includes both an explanation the process in general, as
well as a reference doc about the actual process.

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -26,6 +26,7 @@ packaging
 sphinxcontrib-svg2pdfconverter[CairoSVG]
 sphinx-last-updated-by-git
 sphinx-sitemap
+sphinxcontrib-mermaid==2.0.0
 
 # Vale dependencies
 rst2html
